--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "components-showcase",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "16.x"
+  },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.3",
     "@monaco-editor/react": "3.7.5",
@@ -23,6 +26,7 @@
     "immer": "^8.0.1",
     "jscodeshift": "0.11.0",
     "localforage": "^1.9.0",
+    "lodash": "^4.17.23",
     "monaco-editor": "0.21.3",
     "monaco-jsx-highlighter": "0.0.15",
     "prettier": "^2.3.1",
@@ -37,8 +41,8 @@
     "web-vitals": "^1.1.2"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "NODE_OPTIONS=--openssl-legacy-provider react-scripts start",
+    "build": "NODE_OPTIONS='--max_old_space_size=4096 --openssl-legacy-provider' react-scripts build",    
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
